Add zgc jvm args.