@@ -19,4 +19,5 @@ dependencies {
 
 application {
     mainClass.set("io.ktor.server.netty.EngineMain")
+    applicationDefaultJvmArgs = listOf("-XX:+UnlockExperimentalVMOptions", "-XX:+UseZGC")
 }
